# rrdtool

./: .gitignore  .gitignore.save  Makefile  hello  hello.c  rrdtool  rrdtool.c
build-qt_gui-Desktop_Qt_5_9_2_GCC_64bit-Debug/: Makefile  moc_aboutwindow.cpp  moc_createwindow.cpp  moc_deletewindow.cpp  moc_getdatawindow.cpp  moc_mainwindow.cpp  moc_renamewindow.cpp  moc_settingswindow.cpp  qt_gui  ui_aboutwindow.h  ui_createwindow.h  ui_deletewindow.h  ui_getdatawindow.h  ui_mainwindow.h  ui_renamewindow.h  ui_settingswindow.h
crontask/: cron.txt  get_mem.sh
qt/build-qt_gui-Desktop_Qt_5_9_2_GCC_64bit-Debug/: qt_gui  ui_mainwindow.h
qt/qt_gui/: aboutwindow.ui  createwindow.cpp  createwindow.h  createwindow.ui  deletewindow.cpp  deletewindow.h  deletewindow.ui  getdatawindow.cpp  getdatawindow.h  getdatawindow.ui  insertwindow.cpp  insertwindow.h  insertwindow.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow.ui.autosave  qt_gui.pro  renamewindow.cpp  renamewindow.h  renamewindow.ui  settingswindow.cpp  settingswindow.h  settingswindow.ui
qt_gui/: mainwindow.ui  mainwindow.ui.autosave  qt_gui.pro
rddtool/: CMakeLists.txt  conf.ini  config_manager.c  config_manager.h  main.c  rrdtool.c  rrdtools.c  rrdtools.h
rddtool/data/: 1.rrd  12222.rrd  1test.rrd  2test.rrd  3_newtest.rrd  example  exmaple.rrd  test.rrd  test2
rddtool/res/: 1.csv  1.json  1.jtxt
rddtool/test_db/: 2ds.rrd  2test.rrd  test.rrd
